Fix styles + overflowing text in mobile mode was fixed + overflowing dialogs when IME is shown in mobile mode was fixed + too small custom menu in mobile mode was fixed

--- a/src/styles/mods/_app_common.scss
+++ b/src/styles/mods/_app_common.scss
@@ -129,11 +129,11 @@ html {
   }
 }
 
-.clickable {
+.clickable.clickable.clickable {
   cursor: pointer;
   @include noselect;
 
-  &:hover {
+  &:not(.no-underline):hover {
     text-decoration: underline;
   }
 }
